--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
 </head>
 
 <body>
+<img src="logo.png" alt="LaviChat logo">
 <h2>Please Enter lavi group's secret passcode to Start chat,</h2><br>
 <form id="form" method="post" action="index.html">
     <input name="pass" type="password" id="msg" size="64"/>
