Added nick name at login

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript">
-    var sock = io.connect('lavichat.herokuapp.com');
+    var sock = io.connect('http://localhost:5000');
 	 $(function() {
     var snd = new Audio("beep.wav"); // buffers automatically when created
     var msge = $("#msg");
-    var name = $("#name");
+    var nick="";
 	var log = $("#log");
 	function sendMsg(){
 	var d = log[0]
     var doScroll = d.scrollTop == d.scrollHeight - d.clientHeight;
-	var s_msg = "<h3>"+name.val()+"</h3>"+" :: "+msge.val();
+	var s_msg = "<h3>"+nick+"</h3>"+" :: "+msge.val();
 	$("<span>"+s_msg+"</span><br>").appendTo("#log");
 	sock.emit('send',{msg:s_msg});
 	if (doScroll) {
@@ -21,7 +21,7 @@
         }
 	
 	}
-	}
+	
 	function logMsg(data){
 	var d = log[0]
     var doScroll = d.scrollTop == d.scrollHeight - d.clientHeight;
@@ -43,7 +43,11 @@
     });
 	  
     sock.on('message', logMsg);
-    
+    sock.on('nick', function (data){
+	nick=data.nick;
+	console.log(nick);
+	
+	});
     });
 	
 
@@ -92,8 +96,7 @@ body {
 <form id="form">
     <input type="submit" id="send" value="Send" />
     <input type="text" id="msg" size="64"/>
-	<label>Enter your Nick name here</label>
-	<input type="text" id="name" size="32"/>
+	
 
 </body>
 </html>
