--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript">
 
-    var sock = io.connect('http://localhost:5000');
+    var sock = io.connect('lavichat.herokuapp.com');
 	 $(function() {
 	 $('#log').mouseenter(function() {
        document.title='LAVI Chat Room';
