minor html decoration

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	function sendMsg(){
 	var d = log[0]
     var doScroll = d.scrollTop == d.scrollHeight - d.clientHeight;
-	var s_msg = "<h3>"+nick+"</h3>"+" :: "+msge.val();
+	var s_msg = "<h4>"+nick+"</h4>"+" >> "+msge.val();
 	$("<span>"+s_msg+"</span><br>").appendTo("#log");
 	sock.emit('send',{msg:s_msg});
 	if (doScroll) {
