--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>LAVI Chat Room</title>
-<script type="text/javascript" src="/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/siofu/client.js"></script>
 <script src="/lavi.js"></script>
